// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tokenize html > should identify a single space as a single token 1`] = `
[
  {
    "length": 1,
    "type": "text",
    "value": " ",
  },
  {
    "length": 1,
    "type": "text",
    "value": "a",
  },
  {
    "length": 1,
    "type": "text",
    "value": " ",
  },
  {
    "length": 1,
    "type": "text",
    "value": "b",
  },
  {
    "length": 1,
    "type": "text",
    "value": " ",
  },
]
`;

exports[`tokenize html > should identify contiguous whitespace as a single token 1`] = `
[
  {
    "length": 1,
    "type": "text",
    "value": "a",
  },
  {
    "length": 11,
    "type": "text",
    "value": "           ",
  },
  {
    "length": 1,
    "type": "text",
    "value": "b",
  },
]
`;

exports[`tokenize html > should identify doctype 1`] = `
[
  {
    "length": 7,
    "name": "doctype",
    "raw": "<!doctype>",
    "type": "tag-start",
  },
  {
    "length": 1,
    "name": "p",
    "raw": "<p>",
    "type": "tag-start",
  },
  {
    "length": 5,
    "type": "text",
    "value": "hello",
  },
  {
    "length": 1,
    "name": "p",
    "raw": "</p>",
    "type": "tag-end",
  },
]
`;

exports[`tokenize html > should identify self closing tags as tokens 1`] = `
[
  {
    "length": 1,
    "name": "p",
    "raw": "<p>",
    "type": "tag-start",
  },
  {
    "length": 5,
    "type": "text",
    "value": "hello",
  },
  {
    "length": 2,
    "name": "br",
    "raw": "</br>",
    "type": "tag-end",
  },
  {
    "length": 7,
    "type": "text",
    "value": "goodbye",
  },
  {
    "length": 1,
    "name": "p",
    "raw": "</p>",
    "type": "tag-end",
  },
]
`;

exports[`tokenize html > when encountering atomic tags > should identify a math tag as a single token 1`] = `
[
  {
    "length": 1,
    "name": "p",
    "raw": "<p>",
    "type": "tag-start",
  },
  {
    "length": 123,
    "name": "math",
    "raw": "<math xmlns="http://www.w3.org/1998/Math/MathML"><mi>&#x03C0;</mi><mo>&#x2062;</mo><msup><mi>r</mi><mn>2</mn></msup></math>",
    "type": "tag-full",
  },
]
`;

exports[`tokenize html > when encountering atomic tags > should identify a script tag as a single token 1`] = `
[
  {
    "length": 1,
    "name": "p",
    "raw": "<p>",
    "type": "tag-start",
  },
  {
    "length": 35,
    "name": "script",
    "raw": "<script>console.log("hi");</script>",
    "type": "tag-full",
  },
]
`;

exports[`tokenize html > when encountering atomic tags > should identify an iframe tag as a single token 1`] = `
[
  {
    "length": 1,
    "name": "p",
    "raw": "<p>",
    "type": "tag-start",
  },
  {
    "length": 35,
    "name": "iframe",
    "raw": "<iframe src="sample.html"></iframe>",
    "type": "tag-full",
  },
]
`;

exports[`tokenize html > when encountering atomic tags > should identify an image tag as a single token 1`] = `
[
  {
    "length": 1,
    "name": "p",
    "raw": "<p>",
    "type": "tag-start",
  },
]
`;

exports[`tokenize html > when encountering atomic tags > should identify an object tag as a single token 1`] = `
[
  {
    "length": 1,
    "name": "p",
    "raw": "<p>",
    "type": "tag-start",
  },
  {
    "length": 53,
    "name": "object",
    "raw": "<object><param name="1" /><param name="2" /></object>",
    "type": "tag-full",
  },
]
`;

exports[`tokenize html > when encountering atomic tags > should identify an svg tag as a single token 1`] = `
[
  {
    "length": 1,
    "name": "p",
    "raw": "<p>",
    "type": "tag-start",
  },
  {
    "length": 28,
    "name": "svg",
    "raw": "<svg width="100" height="100">",
    "type": "tag-start",
  },
  {
    "length": 77,
    "name": "circle",
    "raw": "<circle cx="50" cy="50" r="40" stroke="green" stroke-width="4" fill="yellow" />",
    "type": "tag-start",
  },
  {
    "length": 3,
    "name": "svg",
    "raw": "</svg>",
    "type": "tag-end",
  },
  {
    "length": 1,
    "name": "p",
    "raw": "</p>",
    "type": "tag-end",
  },
]
`;

exports[`tokenize html > when encountering atomic tags > should identify head tag as a single token 1`] = `
[
  {
    "length": 176,
    "name": "head",
    "raw": "<head>
						<title>hello</title>
						<script>hello what is this new tag # . ! ( ) word </script>
						<style>hello what is this new tag # . ! ( ) word </style>
					</head>",
    "type": "tag-full",
  },
]
`;

exports[`tokenize html > when encountering atomic tags > should identify style tag as a single token 1`] = `
[
  {
    "length": 57,
    "name": "style",
    "raw": "<style>hello what is this new tag # . ! ( ) word </style>",
    "type": "tag-full",
  },
]
`;
